kubernetes/applications/mealie/mealie-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v2.4.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              memory: "1000Mi"
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-pvc
