kubernetes/applications/mealie/mealie-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: mealie
