kubernetes/applications/mealie/keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: 188.155.74.203
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: mealie
spec:
  ingressClassName: nginx
  rules:
  - host: cook.lilalala.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mealie
            port:
              name: http
  tls:
  - hosts:
    - cook.lilalala.com
    secretName: mealie-tls
